--- a/css/save-the-date.css
+++ b/css/save-the-date.css
@@ -5,7 +5,7 @@
 .save-the-date-calendar {
   width: 100%;
   max-width: 100%;
-  margin: 60px 0 0 40px;
+  margin: 60px auto 0;
   padding: 0;
   position: relative;
   border-radius: 0;
